# node-webcodecs

./: .c8rc.json  .clang-tidy  .gitignore  .gitmodules  .mise.toml  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  NOTICE  PROMPT.md  README.md  SECURITY.md  SUPPORTED_CODECS.md  TODO.md  binding.gyp  biome.json  eslint.config.js  eslint.ignores.js  package-lock.json  package.json  plan.md  progress.txt  tsconfig.gyp.json  tsconfig.json  tsconfig.tsbuildinfo  typedoc.json  webcodecs.idl
.agent/: PLANS.md  dev-cpp.skill  dev-ts.skill  execplan-rewrite-scripts-to-ts.md  execplan-workflow-ci-to-ts.md  tdd-plan.skill
.claude/: dev-workflow-state.json  ralph-todos.md  settings.json  trajectory.jsonl
.claude/artifacts/: 10.6-10.7-handoff.md  11-handoff.md  12-handoff.md  13-handoff.md  14-handoff.md  2.2-handoff.md  2.3-handoff.md  3.1-handoff.md  3.2-handoff.md  3.3-handoff.md  3.4-handoff.md  3.5-handoff.md  3.6-handoff.md  4.1-handoff.md  4.2-handoff.md  4.3-handoff.md  4.4-handoff.md  4.5-handoff.md  4.6-handoff.md  5.1-handoff.md  5.2-handoff.md  5.3-handoff.md  5.4-handoff.md  5.5-handoff.md  5.6-handoff.md  5.7-handoff.md  6.1-handoff.md  6.2-handoff.md  6.3-handoff.md  6.4-handoff.md  6.5-handoff.md  6.6-handoff.md  6.7-handoff.md  7.1-handoff.md  7.2-handoff.md  7.3-handoff.md  7.4-handoff.md  7.5-7.8-handoff.md  7.9-7.16-handoff.md  8.1-handoff.md  (+45 more)
.claude/commands/: ralph-loop-webcodecs.md
.claude/prompts/: google-cpp-engineer.md  todos.md
.claude/scratch/: 10.6-10.7-spec-analysis.md  10.6-10.7-verification.md  11-spec-analysis.md  11-verification.md  12-spec-analysis.md  12-verification.md  13-spec-analysis.md  14-spec-analysis.md  2.2-spec-analysis.md  2.2-verification.md  2.3-spec-analysis.md  2.3-verification.md  3.1-spec-analysis.md  3.3-spec-analysis.md  3.3-verification.md  3.4-spec-analysis.md  3.4-verification.md  3.5-spec-analysis.md  3.5-verification.md  3.6-spec-analysis.md  3.6-verification.md  4.1-spec-analysis.md  (+5 more)
.github/: CONTRIBUTING.md
.serena/: project.yml
bench/: index.ts  tsconfig.json
docker/: Dockerfile.linux-x64
docs/: 2025-12-31-lets-set-up-mise-and-then-i-want-to-run-locally-t.txt  Dockerfile.linux-x64  README.md  SUBMISSION.md  WEBCODECS_IMPLEMENTATION_TODO.md  WEBCODECS_MASTER_TODO.md  WEBCODECS_SPEC_DETAILS.md  WEBCODECS_USER_STORIES.md  best-practices.md  build-ffmpeg.yml  build-system.md  codecs.md  compliance.md  ffmpeg-packages.md  known-issues.md  libc-tagging-implementation.md  release.md  spec-defense-1.md  spec-defense-2.md  stuff.txt
examples/: .gitignore  README.md  basic-encode.js  decode-gif.mjs  decode-gif.ts  generate-video.mjs  generate-video.ts  package.json  run-all.js  run-demo.js  run-demo.ts  tsconfig.json  watermarker.js
ffmpeg/: Dockerfile.linux-x64  Dockerfile.linux-x64-musl  build.sh  from-ci-build.js  package.json  versions.json
gyp/: ffmpeg-paths-lib.js  ffmpeg-paths-lib.ts  ffmpeg-paths.js  ffmpeg-paths.ts
harness_tests/: package-lock.json  package.json  vitest.config.ts
install/: build.js  check.js
lib/: audio-data.ts  audio-decoder.ts  audio-encoder.ts  binding.ts  control-message-queue.ts  demuxer.ts  encoded-chunks.ts  errors.ts  ffmpeg.ts  image-decoder.ts  image-track-list.ts  image-track.ts  index.ts  is.ts  native-types.ts  platform.ts  resource-manager.ts  test-video-generator.ts  transfer.ts  types.ts  video-decoder.ts  video-encoder.ts  video-filter.ts  video-frame.ts
npm/: from-local-build.js  package.json
openspec/: project.md
scripts/: bump-version.js  bump-version.ts  check-macos-abi.cjs  check-macos-abi.ts  create-platform-packages.js  create-platform-packages.mjs  create-platform-packages.ts  create-webcodecs-proposals.sh  fetch-webcodecs-spec.ts  fetch-webcodecs-specs.ts  ffmpeg-manifest.mjs  generate-types-from-idl.ts  gh-delete-caches.sh  gh-delete-workflow-runs.sh  install.mjs  native-runner.ts  resolve-deps.mjs  setup-ffmpeg.sh  setup-ffmpeg.ts
src/: addon.cc  addon.cpp  async_decode_worker.cc  async_decode_worker.h  async_encode_worker.cc  async_encode_worker.h  audio_data.cc  audio_data.h  audio_decoder.cc  audio_decoder.h  audio_encoder.cc  audio_encoder.h  codec_registry.cc  codec_registry.h  common.cc  common.h  demuxer.cc  demuxer.h  descriptors.cc  descriptors.h  encoded_audio_chunk.cc  encoded_audio_chunk.h  encoded_video_chunk.cc  encoded_video_chunk.cpp  encoded_video_chunk.h  error_builder.cc  error_builder.h  ffmpeg_raii.h  image_decoder.cc  image_decoder.h  muxer.cc  muxer.h  test_video_generator.cc  video_decoder.cc  video_decoder.cpp  video_decoder.h  video_decoder_worker.cc  video_decoder_worker.h  video_encoder.cc  video_encoder.cpp  (+10 more)
test/: 01_smoke.js  02_config.js  02_frame_data.js  03_encoding.js  03_frame.js  04_encoding.js  04_leak_check.js  05_render_file.js  06_bitrate_control.js  07_concurrency.js  08_force_keyframe.js  09_robustness.js  10_encoder_reset.js  11_config_supported.js  12_chunk_copyto.js  13_frame_copyto.js  14_ondequeue.js  15_frame_clone.js  16_decoder_basic.js  17_decoder_decode.js  18_decoder_typescript.js  19_audio_data.js  20_encoded_audio_chunk.js  21_audio_encoder_basic.js  22_audio_data_ts.js  22_audio_encoder_encode.js  23_audio_decoder.js  23_encoded_audio_chunk_ts.js  24_audio_typescript.js  25_audio_encoder_ts.js  25_frame_yuv.js  26_async_decoder.js  27_async_encoder.js  27_audio_decoder_ts.js  28_audio_roundtrip.js  29_demuxer.js  29_video_filter.js  30_blur_regions.js  31_filter_null_checks.js  31_videoframe_duration.js  (+39 more)
test/native/: .gitignore  CMakeLists.txt  COVERAGE_REPORT.md  PERFORMANCE.md  README.md  test_main.cpp
test/native/benchmark/: codec_throughput.cpp  queue_performance.cpp  raii_overhead.cpp
test/native/helpers/: test_utils.h
test/native/mocks/: mock_callbacks.h
test/native/spec/: test_flush_semantics.cpp  test_queue_semantics.cpp  test_reset_semantics.cpp  test_saturation_detection.cpp  test_state_machine.cpp
test/native/stress/: test_concurrent_operations.cpp  test_memory_leaks.cpp
test/native/unit/: test_control_message_queue.cpp
(+599 files in other folders)
